--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
         <title>方鹿的瞎玩日志∠( ᐛ 」∠)＿</title>
         <link rel="stylesheet" type="text/css" href="/index_html_styles.css">
     </head>
