--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <link rel="stylesheet" type="text/css" href="/index_html_styles.css">
     </head>
     <body>
-
         <div class="container">
             <img id="cover" src="/home_page.jpg" alt="方鹿的瞎玩日志∠( ᐛ 」∠)"/>
             <h1>方鹿的瞎玩日志∠( ᐛ 」∠)</h1>
         </div>
+        <div class="container-placeholder"></div>
         <div class="description">
             <h1>欢迎来到方鹿的瞎玩日志！</h1>
             <h2>Recently Posts</h2>
